# connect-four-rust

./: BENCH.md  Cargo.toml  EVO.md  Makefile  ORDERING.md  PERFT.md  README.md  ROLLOUTS.md  SOLVE.md  TODO.md  hashes.txt  perf.data  perf.data.old  rows  tests.py  ulimit.txt
notes/: ORDERING.md  PERFT.md  ROLLOUTS.md  SOLVE.md
src/: BITBOARD.md  TABLE.md  TOURNAMENT.md  bestmove.rs  bitboard.rs  board.rs  evolution.rs  main.rs  perft.rs  play.rs  position.rs  rollouts.rs  solve.rs  table.rs  tournament.rs  types.rs  util.rs
